Fixed video width on tablet sized screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,7 +311,7 @@ footer > h4 {
 
     iframe {
         margin-left: 0;
-        width: 100%;
+        width: auto%;
     }
 
 }
